--- a/layouts/partials/_shared/navbar.html
+++ b/layouts/partials/_shared/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
     <div class="container pr-0">
         <!-- Begin Logo -->
-        <a class="navbar-brand" href="{{ .Site.BaseURL }}/">
+        <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}/">
 
             {{ with .Site.Params.logo }}
             <img src="{{ . | urlize | relURL }}" alt="logo">
@@ -24,9 +24,14 @@
             <ul class="navbar-nav ml-auto">
                 {{ range .Site.Menus.main }} 
                 <li class="nav-item {{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
-                    <a class="nav-link" href="{{ .URL }}">{{ .Name | title }}</a>
+                    <a class="nav-link" href="{{ .URL | relLangURL }}">{{ .Name | title }}</a>
                 </li>
                 {{ end }}
+                {{ range $.Site.Home.AllTranslations }}
+                <li class="nav-item">
+                    <a href="{{ .Permalink }}" class="nav-link">{{ .Language.LanguageName }}</a>
+                </li>
+                {{ end }}                       
             </ul>
         </div>
         <!-- End Menu -->
